--- a/report/references.bib
+++ b/report/references.bib
@@ -147,9 +147,30 @@
     eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1468-0149.1981.tb00986.x},
     year = {1981}
 }
+
 @phdthesis{Girard1972,
     title = {Interprétation fonctionnelle et élimination des coupures de l'arithmétique d'ordre supérieur},
     author = {Jean-Yves Girard},
     school = {Université Paris Diderot},
     year = {1972}
 }
+
+@article{DBLP:journals/corr/abs-2001-11001,
+  author    = {Guillaume Allais and
+               Robert Atkey and
+               James Chapman and
+               Conor McBride and
+               James McKinna},
+  title     = {A Type and Scope Safe Universe of Syntaxes with Binding: Their Semantics
+               and Proofs},
+  journal   = {CoRR},
+  volume    = {abs/2001.11001},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2001.11001},
+  archivePrefix = {arXiv},
+  eprint    = {2001.11001},
+  timestamp = {Thu, 30 Jan 2020 18:46:36 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2001-11001.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
