--- a/report/references.bib
+++ b/report/references.bib
@@ -174,3 +174,23 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{DBLP:conf/icfp/ChapmanDMM10,
+  author    = {James Chapman and
+               Pierre{-}{\'{E}}variste Dagand and
+               Conor McBride and
+               Peter Morris},
+  editor    = {Paul Hudak and
+               Stephanie Weirich},
+  title     = {The gentle art of levitation},
+  booktitle = {Proceeding of the 15th {ACM} {SIGPLAN} international conference on
+               Functional programming, {ICFP} 2010, Baltimore, Maryland, USA, September
+               27-29, 2010},
+  pages     = {3--14},
+  publisher = {{ACM}},
+  year      = {2010},
+  url       = {https://doi.org/10.1145/1863543.1863547},
+  doi       = {10.1145/1863543.1863547},
+  timestamp = {Tue, 06 Nov 2018 16:59:24 +0100},
+  biburl    = {https://dblp.org/rec/conf/icfp/ChapmanDMM10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
