--- a/report/GrantFleming-4thYearProject-Report.tex
+++ b/report/GrantFleming-4thYearProject-Report.tex
@@ -23,7 +23,8 @@
 	\input{chapters/RelevantRelatedWork.tex}
         \part{Building A Type-Checker-Generator}
 	\input{chapters/ProjectPlan.tex}
-	\input{chapters/ALanguageForDescribingTypeSystems.tex}        
+	\input{chapters/ALanguageForDescribingTypeSystems.tex}
+        \input{chapters/Discussion.tex}
 	
 	\input{appendices.tex}
 	
