Added new reference

--- a/report/references.bib
+++ b/report/references.bib
@@ -194,3 +194,20 @@
   biburl    = {https://dblp.org/rec/conf/icfp/ChapmanDMM10.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@inproceedings{DBLP:conf/haskell/McBrideM04,
+  author    = {Conor McBride and
+               James McKinna},
+  editor    = {Henrik Nilsson},
+  title     = {Functional pearl: i am not a number-i am a free variable},
+  booktitle = {Proceedings of the {ACM} {SIGPLAN} Workshop on Haskell, Haskell 2004,
+               Snowbird, UT, USA, September 22-22, 2004},
+  pages     = {1--9},
+  publisher = {{ACM}},
+  year      = {2004},
+  url       = {https://doi.org/10.1145/1017472.1017477},
+  doi       = {10.1145/1017472.1017477},
+  timestamp = {Tue, 06 Nov 2018 16:58:22 +0100},
+  biburl    = {https://dblp.org/rec/conf/haskell/McBrideM04.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
