--- a/TypeCheckerGenerator/latex/SyntacticUniverse.tex
+++ b/TypeCheckerGenerator/latex/SyntacticUniverse.tex
@@ -10,7 +10,11 @@
 \begin{code}%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
-\AgdaModule{Data.Product}\<%
+\AgdaModule{Data.Product}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}×\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaFunction{Σ-syntax}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{},\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
@@ -22,18 +26,27 @@
 \\
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
+\AgdaModule{Data.Nat}\AgdaSpace{}%
+\AgdaKeyword{using}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{ℕ}\AgdaSymbol{)}\<%
+\\
+\>[0]\AgdaKeyword{open}\AgdaSpace{}%
+\AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Relation.Binary.PropositionalEquality}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}≡\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaInductiveConstructor{refl}\AgdaSymbol{)}\<%
 \\
+%
+\\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Context}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{Var}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaDatatype{Bwd}\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}-,\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
+\AgdaSymbol{(}\AgdaDatatype{Bwd}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaInductiveConstructor{ε}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{\AgdaUnderscore{}-,\AgdaUnderscore{}}}\AgdaSymbol{;}\AgdaSpace{}%
+\AgdaDatatype{Var}\AgdaSymbol{)}\<%
 \end{code}
 }
 
@@ -45,15 +58,25 @@
 \>[2]\AgdaKeyword{variable}\<%
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaGeneralizable{X}%
-\>[7]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaGeneralizable{X}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaGeneralizable{Γ}%
-\>[7]\AgdaSymbol{:}\AgdaSpace{}%
+\>[4]\AgdaGeneralizable{Γ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaDatatype{Bwd}\AgdaSpace{}%
 \AgdaGeneralizable{X}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{m}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
+\\
+%
+\>[4]\AgdaGeneralizable{n}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\<%
 \end{code}
 }
 
@@ -70,11 +93,11 @@
 \>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaInductiveConstructor{tag}%
 \>[8]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{T}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Desc}\AgdaSpace{}%
 \AgdaBound{X}\AgdaSymbol{)}\AgdaSpace{}%
@@ -140,20 +163,20 @@
 \\
 \>[0]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaInductiveConstructor{tag}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{cD}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟧}}%
 \>[16]\AgdaBound{Ρ}\AgdaSpace{}%
 \AgdaBound{Γ}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{Σ[}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
 \AgdaFunction{∈}\AgdaSpace{}%
-\AgdaBound{T}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
 \AgdaFunction{]}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
 \AgdaBound{cD}\AgdaSpace{}%
-\AgdaBound{t}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
 \AgdaBound{Ρ}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
@@ -212,13 +235,14 @@
 \AgdaBound{Γ}%
 \>[21]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaRecord{⊤}\<%
+\\
+\>[0]\<%
 \end{code}
-
 
 \begin{code}%
 \>[0]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{F}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{describe}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaGeneralizable{X}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -241,7 +265,7 @@
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSpace{}%
+\AgdaBound{describe}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \\
@@ -249,17 +273,20 @@
 \>[2]\AgdaInductiveConstructor{con}%
 \>[7]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSpace{}%
+\AgdaBound{describe}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{describe}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{Γ}%
-\>[29]\AgdaSymbol{→}\AgdaSpace{}%
+\>[43]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaDatatype{Term}\AgdaSpace{}%
-\AgdaBound{F}\AgdaSpace{}%
+\AgdaBound{describe}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{Γ}\<%
 \end{code}
 
 \subsection{Describing a Generic Language}
+
+We now have the required elements to describe a generic language.
+
